k8s/makemyflix/nuxt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makemyflix-nuxt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: makemyflix-nuxt
  template:
    metadata:
      labels:
        app: makemyflix-nuxt
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/makemyflix-nuxt
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr
