k8s/makemyflix/strapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makemyflix-strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: makemyflix-strapi
  template:
    metadata:
      labels:
        app: makemyflix-strapi
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/makemyflix-strapi
          ports:
            - containerPort: 1337
      imagePullSecrets:
        - name: ghcr
