k8s/makemyflix/nuxt-service.yml
apiVersion: v1
kind: Service
metadata:
  name: makemyflix-nuxt
spec:
  ports:
    - port: 80
      targetPort: 1000
  selector:
    app: makemyflix-nuxt
