k8s/makemyflix/service.yml
apiVersion: v1
kind: Service
metadata:
  name: makemyflix
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: makemyflix
