k8s/makemyflix/strapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: makemyflix-strapi
spec:
  ports:
    - port: 80
      targetPort: 1337
  selector:
    app: makemyflix-strapi
